Fix: more contrast in Rose Pine dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -569,8 +569,8 @@ textarea.input {
 }
 
 [data-theme='rosepine-dark'] {
-	--bg-primary: #232136;
-	--bg-secondary: #2a283e;
+	--bg-primary: #191724;
+	--bg-secondary: #232136;
 	--bg-tertiary: #393552;
 	--bg-card: #2a273f;
 	--bg-hover: #44415a;
